--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -22,3 +22,11 @@
   height: 23px !important;
   width: 20px;
 }
+@media (max-width: 400px) {
+  .name-email {
+    font-size: 13px;
+  }
+  .profile-box{
+    gap: 10px;
+  }
+}
